# 3pages

./: README.md
client/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
client/src/: App.tsx  api.ts  dayjs.ts  env.ts  index.css  store.ts  utils.ts  validation-schema.ts
rs-server/: Cargo.toml  package-lock.json  package.json  schema.prisma
rs-server/migrations/20250713084005_init/: migration.sql
rs-server/src/: controller.rs  controllers.rs  main.rs  middleware.rs  utils.rs
rs-server/src/sql/: delete_entry_by_user_and_date.sql  get_user_by_email.sql
server/: .gitignore  Cargo.toml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  schema.prisma
server/migrations/20250815075127_add_word_count_for_entry/: migration.sql
server/prisma/: schema.prisma
server/prisma/migrations/20250523131407_new_entry_model/: migration.sql
server/prisma/migrations/20250523140536_add_multi_field_id_to_entry/: migration.sql
server/prisma/migrations/20250525152445_entry_text_to_json/: migration.sql
server/src/: api.ts  auth.ts  controller.rs  datetime.rs  db.rs  db.ts  env.rs  env.ts  extractor.rs  logger.ts  main.rs  main.ts  server.ts  tiptap.rs  utils.rs  utils.ts  validation-schema.ts
server/src/sql/: check_entry_exists_by_user_and_date.sql  create_entry.sql  create_user.sql  delete_entry_by_user_and_date.sql  get_entry_by_user_and_date.sql  get_user_by_email.sql  get_user_by_id.sql  get_user_id_by_email.sql  list_entry_dates_by_user.sql  update_entry_text_by_user_and_date.sql
server/src/tests/: index.test.ts
(+16 files in other folders)
