[package]
name = "rs-server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.4"
dotenvy = "0.15.7"
log = "0.4.27"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing-subscriber = "0.3.19"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "sqlite",
  "macros",
  "derive",
  "time",
] }

[profile.dev.package.sqlx-macros]
opt-level = 3
